# metadata

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Install.sh  README.md  Uninstall.sh  aur.sh  install.sh  uninstall.sh
integration/dolphin/: metadata-show.desktop
resources/: io.github.yousefvand.metadata.desktop
src/: DocumentMetadata.cpp  DocumentMetadata.h  MainWindow.cpp  MainWindow.h  MetadataBackend.cpp  MetadataBackend.h  TagDialog.cpp  TagDialog.h  Version.h.in  main.cpp
